2000-05-16  Bart Schaefer  <schaefer@zsh.org>

	* 11419: Test/Makefile.in: Interpolate TESTNUM variable in the
	glob that specifies which tests are run.
	
	* Felix Rosencrantz: 11398: Completion/User/_lzop,
	Completion/Bsd/_bsd_pkg: Fix typos in option descriptions.

	* 11378: Functions/Misc/is-at-least, Misc/make-zsh-urls: Remove
	RCS Id strings.

	* unposted: Doc/Zsh/cond.yo: Yodl off some excess whitespace.
	
2000-05-16  Tanaka Akira  <akr@zsh.org>

	* 11415: Completion/User/_cvs: follow the new matcher-list behaviour.

2000-05-16  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11410: Src/glob.c: tokenize `=' in tokenize(), so that `=cmd'
	will be a candidate for expansion if `~user' is (respecting
	any relevant options).

2000-05-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 11408: Completion/Core/_main_complete, Completion/Core/_normal,
 	Doc/Zsh/compsys.yo: fixed configuration of menu-selection with
 	menu style; pseudo-context `-command-line-', handy for completion
 	in vared
	
	* 11407: Completion/Base/_tilde, Completion/Core/_path_files:
 	avoid tilde- and parameter-completion in quotes
	
	* 11406: Completion/Base/_arguments: make _arguments take the
 	attempt to add matches as an indication not to do default
 	option-completion
	
	* 11403: Completion/Core/_expand, Src/Zle/compcore.c,
	Src/Zle/complist.c: fix scrolling in menu-selection with matches
	spanning multiple lines
	
2000-05-16  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* pws: one hunk of 11381: Completion/Builtins/_vars_eq:
	bad substitution, now picked up by changes in 11380.

	* pws: 11402: Doc/Zsh/options.yo: correct and expand OCTAL_ZEROES
	entry.
	
2000-05-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 11401: Src/Zle/complist.c: make menu-select accept the match
 	when typing a non-special character
	
2000-05-16  Tanaka Akira  <akr@zsh.org>

	* 11396: Completion/User/_look: display a message when
	an argument is empty.
